# portafolio_reflex

./: .gitignore  Dockerfile  README.md  docker-compose.yml  hello.py  pyproject.toml  rxconfig.py
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
portafolio_reflex/: portafolio_reflex.py
portafolio_reflex/Components/: BarProgress.py  GithubComponent.py  LinkedinComponent.py  SplineComponent.py  Timeline.py
