[project]
name = "portafolio-reflex"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "reflex-calendar>=0.0.6",
    "reflex-github-badge>=0.0.3",
    "reflex-icon-library>=1.3.2",
    "reflex-motion>=0.0.1",
    "reflex-qrcode>=0.0.1",
    "reflex>=0.6.8",
]
